# radon

./: .gitignore  README.md  build.py  cpu_examples.ipynb  cpu_test.ipynb  cuda_examples.ipynb  cuda_test.ipynb  debug.ipynb  img.pt  mnist_examples.ipynb  pyproject.toml  sino.pt  test.ipynb  tests.ipynb
radon/: __init__.py  filters.py  radon_cuda.py  radon_filter.py  radon_functional.py  radon_impl.py  radon_transform.py
radon/cpp/: backward.cpp  backward.cu  dyn_type_math.hpp  forward.cpp  forward.cu  matrix.cpp  matrix.cu  matrix_bwd.cpp  matrix_fwd.cpp  radon.cpp
src/: backward.cpp  backward.cu  filters.cu  filters.hpp  forward.cpp  forward.cu  inverse.cu  matrix.cpp  matrix.cu  radon.cpp
